[gd_scene load_steps=63 format=3 uid="uid://brc8fwhvn5s1l"]

[ext_resource type="Texture2D" uid="uid://bpypr716gy2ll" path="res://assets/card-utils/card_back_3.png" id="2_6c3ux"]
[ext_resource type="Script" path="res://scenes/cards/card.gd" id="2_qoqoa"]
[ext_resource type="Texture2D" uid="uid://cl3dhlnp8qppm" path="res://assets/card-utils/playingCards.png" id="3_la56j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l62v5"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 1140, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxgfa"]
atlas = ExtResource("3_la56j")
region = Rect2(700, 190, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_quf3v"]
atlas = ExtResource("3_la56j")
region = Rect2(700, 0, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv7dy"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 1710, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ej8e"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 1520, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfne3"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 1330, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8v2f"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 1140, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c3h1"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 950, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2rdn"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 760, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk6ex"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 380, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcfae"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 0, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rvbe"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 190, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_khsqv"]
atlas = ExtResource("3_la56j")
region = Rect2(560, 570, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_q30jt"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 1710, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tnde"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 1520, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvns4"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 1330, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7oha"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 1140, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0spf"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 950, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy1uk"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 760, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x362"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 570, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_kajuc"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 380, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3slo"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 190, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2pa3"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 1710, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_28fyq"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 1330, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqisk"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 1520, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_y17b8"]
atlas = ExtResource("3_la56j")
region = Rect2(420, 0, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbvkb"]
atlas = ExtResource("3_la56j")
region = Rect2(700, 380, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpivg"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 950, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdw7h"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 760, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_5slae"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 570, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfykx"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 380, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm5wu"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 190, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrakl"]
atlas = ExtResource("3_la56j")
region = Rect2(280, 0, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmpno"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 1710, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_yggwr"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 1520, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7v5e"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 1140, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgumm"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 760, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjjfq"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 950, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_djxmk"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 1330, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_a386s"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 570, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_54s13"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 570, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_32tyg"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 380, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccc3h"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 190, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_rccah"]
atlas = ExtResource("3_la56j")
region = Rect2(140, 0, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwq6n"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 1710, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7ivg"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 1520, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnsim"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 1330, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_72soi"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 1140, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fq25"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 950, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_fear5"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 760, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_npdbh"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 380, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyuwv"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 0, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtwaf"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 190, 140, 190)

[sub_resource type="AtlasTexture" id="AtlasTexture_60utd"]
atlas = ExtResource("3_la56j")
region = Rect2(0, 570, 140, 190)

[sub_resource type="SpriteFrames" id="SpriteFrames_55ua1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l62v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxgfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quf3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv7dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ej8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfne3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8v2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c3h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2rdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk6ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcfae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rvbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khsqv")
}],
"loop": true,
"name": &"clubs",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q30jt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tnde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvns4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7oha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0spf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy1uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x362")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kajuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3slo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2pa3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28fyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqisk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y17b8")
}],
"loop": true,
"name": &"diamonds",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbvkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpivg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdw7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5slae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfykx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm5wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrakl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmpno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yggwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7v5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgumm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjjfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djxmk")
}],
"loop": true,
"name": &"hearts",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a386s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54s13")
}],
"loop": true,
"name": &"jokers",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32tyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccc3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rccah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwq6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7ivg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnsim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72soi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fq25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fear5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npdbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyuwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtwaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60utd")
}],
"loop": true,
"name": &"spades",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_jyh06"]
resource_name = "FlipDown"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.183563)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OtherFace:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1e-05, 0, 0, 0, 0, 1, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.135653, 0.282541)
}

[sub_resource type="Animation" id="Animation_36vkf"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OtherFace:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imcfh"]
_data = {
"FlipDown": SubResource("Animation_jyh06"),
"RESET": SubResource("Animation_36vkf")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v7mex"]
size = Vector2(140, 191.333)

[node name="Card" type="Area2D"]
position = Vector2(-1, 0)
script = ExtResource("2_qoqoa")

[node name="OtherFace" type="Sprite2D" parent="."]
texture = ExtResource("2_6c3ux")

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.34902)
position = Vector2(7, 8)
texture = ExtResource("2_6c3ux")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_55ua1")
animation = &"clubs"

[node name="CardFlips" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_imcfh")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v7mex")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
